--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="carousel.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -35,6 +35,6 @@
         </div>
     </div>
 </div>
-    <script src="carousel.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
